infrastructure/standalone/conf/dp-ui/dp-ui.yaml
#
# Copyright 2021 Merck & Co., Inc. Kenilworth, NJ, USA.
#
#	Licensed to the Apache Software Foundation (ASF) under one
#	or more contributor license agreements. See the NOTICE file
#	distributed with this work for additional information
#	regarding copyright ownership. The ASF licenses this file
#	to you under the Apache License, Version 2.0 (the
#	"License"); you may not use this file except in compliance
#	with the License. You may obtain a copy of the License at
#
#	http://www.apache.org/licenses/LICENSE-2.0
#
#
#	Unless required by applicable law or agreed to in writing,
#	software distributed under the License is distributed on an
#	"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
#	KIND, either express or implied. See the License for the
#	specific language governing permissions and limitations
#	under the License.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-ui
  labels:
    app: dp-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dp-ui
  template:
    metadata:
      labels:
        app: dp-ui
    spec:
      hostname: dp-ui
      containers:
        - name: dp-ui
          image: dp/ui
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          stdin: true
          tty: true
