infrastructure/standalone/conf/dp-ui/dp-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dp-ui-ingress
  labels:
    name: dp-ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dp-ui
                port:
                  number: 80
